cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           glensargent.com
license:            NONE
author:             Glen Sargent
maintainer:         glen@frvr.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
