cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
homepage:           glensargent.com
license:            NONE
author:             Glen Sargent
maintainer:         glen@frvr.com
build-type:         Simple

common shared
    build-depends:    base ^>=4.21.0.0, text, split
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N"

executable day01
    import:   shared
    main-is:  Day01.hs
    hs-source-dirs: src

executable day02
    import:   shared
    main-is:  Day02.hs
    hs-source-dirs: src

executable day03
    import:   shared
    main-is:  Day03.hs
    hs-source-dirs: src
